--- a/lib/cell/style.css
+++ b/lib/cell/style.css
@@ -106,6 +106,25 @@
     -webkit-transform: translate3d(100%, 0, 0);
             transform: translate3d(100%, 0, 0);
 }
+.mint-cell-state {
+    color: inherit;
+    margin-left: 20px;
+}
+.mint-cell-state .mintui {
+    font-size: 20px;
+}
+.mint-cell-state.is-default {
+    margin-left:0;
+}
+.mint-cell-state.is-success {
+    color:#4caf50;
+}
+.mint-cell-state.is-warning {
+    color:#ffc107;
+}
+.mint-cell-state.is-error {
+    color:#f44336;
+}
 .mint-cell-allow-right::after {
     border: solid 2px #c8c8cd;
     border-bottom-width: 0;
